<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@id/crop_popupmenu">
        <item android:id="@id/crop_menu_1to1" android:title="@string/aspect1to1_effect" />
        <item android:id="@id/crop_menu_4to3" android:title="@string/aspect4to3_effect" />
        <item android:id="@id/crop_menu_3to4" android:title="@string/aspect3to4_effect" />
        <item android:id="@id/crop_menu_5to7" android:visible="false" android:title="@string/aspect5to7_effect" />
        <item android:id="@id/crop_menu_7to5" android:visible="false" android:title="@string/aspect7to5_effect" />
        <item android:id="@id/crop_menu_9to16" android:title="@string/aspect9to16_effect" />
        <item android:id="@id/crop_menu_16to9" android:title="@string/aspect16to9_effect" />
        <item android:id="@id/crop_menu_none" android:title="@string/aspectNone_effect" />
        <item android:id="@id/crop_menu_original" android:title="@string/aspectOriginal_effect" />
    </group>
</menu>