<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:id="@id/custom_scrollbar_root" android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:layout_gravity="right" android:id="@id/scroll_bar_view" android:background="@drawable/scroll_bar_main" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    <RelativeLayout android:id="@id/scrollbar_time_panel" android:background="@drawable/scroll_bar_time" android:paddingLeft="15.0dip" android:paddingTop="3.0dip" android:paddingBottom="3.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <TextView android:textSize="23.0dip" android:textColor="@color/black" android:id="@id/scrollbar_time_month_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/scroll_bar_month" android:maxLines="1" android:layout_centerVertical="true" />
        <LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="3.0dip" android:layout_toRightOf="@id/scrollbar_time_month_text" android:layout_centerVertical="true">
            <TextView android:textSize="10.0dip" android:textColor="@color/black" android:id="@id/scrollbar_time_year_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/scroll_bar_year" android:maxLines="1" />
            <TextView android:textSize="10.0dip" android:textColor="@color/black" android:id="@id/scrollbar_time_day_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/scroll_bar_day" android:maxLines="1" />
        </LinearLayout>
    </RelativeLayout>
</FrameLayout>